tabs 横向移动动效

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
     <main>
         <div class="container">
-            <div class="tabs">
+            <div class="tabs left">
                 <div class="sign-in">登陆</div>
-                <div class="sign-up active">注册</div>
+                <div class="sign-up">注册</div>
             </div>
             <div class="form">
                 <form action="" id="sign-in">
                     <label>
                         <p>username</p>
-                        <p class="error"></p>
+                        <span class="error"></span>
                         <input name="username" type="text">
                     </label>
                     <label>
                         <p>password</p>
-                        <p class="error"></p>
+                        <span class="error"></span>
                         <input type="password" name="password">
                     </label>
                     <input type="submit" name="submit">
@@ -33,17 +33,17 @@
                 <form action="" id="sign-up">
                     <label>
                         <p>username</p>
-                        <p class="error"></p>
+                        <span class="error"></span>
                         <input name="username" type="text">
                     </label>
                     <label>
                         <p>email</p>
-                        <p class="error"></p>
+                        <span class="error"></span>
                         <input name="email" type="email">
                     </label>
                     <label>
                         <p>password</p>
-                        <p class="error"></p>
+                        <span class="error"></span>
                         <input type="password" name="password">
                     </label>
                     <input type="submit" name="submit" value="提交">
