--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <main>
         <div class="container">
             <div class="tabs left">
-                <div class="sign-in">登陆</div>
-                <div class="sign-up">注册</div>
+                <div data-tab="sign-in" class="sign-in">登陆</div>
+                <div data-tab="sign-up" class="sign-up">注册</div>
             </div>
             <div class="form">
                 <form action="" id="sign-in">
