--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="container">
             <div class="tabs left">
-                <div data-tab="sign-in" class="sign-in">登陆</div>
+                <div data-tab="sign-in" class="sign-in">登入</div>
                 <div data-tab="sign-up" class="sign-up">注册</div>
             </div>
 
