add background imgae & dimmer

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
+    <div class="dimmer"></div>
     <main>
+        
         <div class="container">
             <div class="header">
-                <h1>TESTV</h1>
+                <h1>zipline</h1>
             </div>
             <div class="tabs left">
                 <div data-tab="sign-in" class="sign-in">登录</div>
@@ -58,7 +60,7 @@
                         <input type="password" data-input="signUp" name="password">
                     </label>                   
                      <div class="form-submit">
-                        <button class="disabled" type="submit" data-button="sign-up" form="sign-up" value="sign up">立即注册</button>
+                        <button class="disabled" type="submit" data-button="sign-up" disabled form="sign-up" value="sign up">立即注册</button>
                         <p>注册即表示同意 <a href="">《用户协议》</a></p>
                     </div>
                 </form>
