--- a/index.html
+++ b/index.html
@@ -23,43 +23,43 @@
             </div>
 
             <div class="forms">
-                <form class="form-sign-in active" action="" id="sign-in" method="post">
+                <form  class="form-sign-in active" action="" id="sign-in" method="post">
 
                     <label>
-                        <p>用户名<span class="error">或密码错误,请重新输入</span></p>
+                        <p>用户名<span class=""></span></p>
                         
                         <input name="username" type="text" data-input="signIn" id="sign-in-username">
                     </label>
 
                     <label>
-                        <p>密码<span class="error"></span></p>
+                        <p>密码<span class=""></span></p>
                         <input type="password" name="password" data-input="signIn" id="sign-in-password">
                     </label>
                     <div class="form-submit">
                         <button class="disabled" data-button="sign-in" disabled type="submit" form="sign-in" value="sign in"> 立即登录 </button>
-                        <a href="">忘记密码?</a>
+                        <a href="javascript:void(0)">忘记密码?</a>
                     </div>
 
                 </form>
 
                 <form class="form-sign-up" action="" id="sign-up" method="post">
                     <label>
-                        <p>用户名 <span class="error"></span></p>
+                        <p>用户名 <span class=""></span></p>
                         <input name="username" data-input="signUp" type="text">
                     </label>
 
                     <label>
-                        <p>邮箱 <span class="error"></span></p>
+                        <p>邮箱 <span class=""></span></p>
                         <input name="email" data-input="signUp" type="email">
                     </label>
 
                     <label>
-                        <p>密码 <span class="error"></span></p>
+                        <p>密码 <span class=""></span></p>
                         <input type="password" data-input="signUp" name="password">
                     </label>
                     <div class="form-submit">
                         <button class="disabled" type="submit" data-button="sign-up" disabled form="sign-up" value="sign up">立即注册</button>
-                        <p>注册即表示同意 <a href="">《用户协议》</a></p>
+                        <p>注册即表示同意 <a href="javascript:void(0);">《用户协议》</a></p>
                     </div>
                 </form>
             </div>
