完成登录&信息板展示功能

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <div class="dimmer active">
+    <div class="dimmer">
         <div class="login-info">
             <p class="introduction">已登录！！</p>
             <p class='login-info-username'>您的用户名为：<span></span></p>
             <p class='login-info-email'>您的邮箱为：<span></span></p>
-            <div><button>登出</button></div>
+            <div class="js-logout"><button>登出</button></div>
         </div>
     </div>
     <main>
